--- a/virgo.html
+++ b/virgo.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+  <script src="script.js"></script>
 <body>
   <div id="bg-blobs" aria-hidden="true"></div>
 
